# Project2

./: CMakeLists.txt  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Rule.cpp  main.cpp
Lexer/: Lexer.cpp
Parser/: DatalogProgram.cpp  DatalogProgram.h  Parameter.cpp  Parser.cpp  Predicate.h  Rule.h
